# Computational-Physics

./: .clangd  .gitignore  CMakeLists.txt  README  README.md  main.cpp  main.sh
Docs/: Doxyfile
Docs/html/: _derivative_calculator_8cpp.html  _derivative_calculator_8hpp.html  _derivative_calculator_8hpp_source.html  _math_utils_8cpp.html  _math_utils_8hpp.html  _math_utils_8hpp_source.html  _unit_converter_8cpp.html  _unit_converter_8hpp.html  _unit_converter_8hpp_source.html  dir_0a824aa1f70ce3b829ef378253b085da.html  dir_20bdeea7b42d2525cb0ed96d22572afb.html  dir_27fb58b70c148409514e21c5f1cc7d19.html  dir_4335ce4a64d0d4f9f4c8f0a782dfdfeb.html  dir_696759026424fb5633bfce05262232ab.html  dir_6af39d657f45af6f05497617609149f3.html  dir_856524284ebe840938865dc061f982fb.html  dir_a5c334b247c9f49eb897dee53505d91f.html  dir_f682b4da077637e50c82c61781f4df1a.html  doxygen_crawl.html  files.html  index.html  namespacecomph.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
Docs/latex/: _derivative_calculator_8cpp.tex  _derivative_calculator_8hpp.tex  _derivative_calculator_8hpp_source.tex  _math_utils_8cpp.tex  _math_utils_8hpp.tex  _math_utils_8hpp_source.tex  _unit_converter_8cpp.tex  _unit_converter_8hpp.tex  _unit_converter_8hpp_source.tex  files.tex  namespacecomph.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
Include/: DerivativeCalculator.hpp  MathUtils.hpp  StaticMatrix.hpp  UnitConverter.hpp
Source/: CMakeLists.txt
Utils/: CMakeLists.txt  DerivativeCalculator.cpp  MathUtils.cpp  UnitConverter.cpp
(+11 files in other folders)
